# src/types/story-enums.ts
@@ -39,6 +39,7 @@ export enum GraphicalStyle {
   MINIMALIST = 'minimalist',
   VINTAGE = 'vintage',
   COMIC_BOOK = 'comic_book',
+  EURO_COMIC_BOOK = 'euro_comic_book',
   ANIME = 'anime',
   PIXAR_STYLE = 'pixar_style',
   DISNEY_STYLE = 'disney_style',
@@ -86,6 +87,7 @@ export const GraphicalStyleLabels: Record<GraphicalStyle, string> = {
   [GraphicalStyle.MINIMALIST]: 'Minimalist',
   [GraphicalStyle.VINTAGE]: 'Vintage',
   [GraphicalStyle.COMIC_BOOK]: 'Comic Book',
+  [GraphicalStyle.EURO_COMIC_BOOK]: 'Humorous Adventure',
   [GraphicalStyle.ANIME]: 'Anime',
   [GraphicalStyle.PIXAR_STYLE]: 'Pixar Style',
   [GraphicalStyle.DISNEY_STYLE]: 'Disney Style',
